# renamepp

./: CMakeLists.txt  README.md  main.cpp  run.sh
src/: Context.cpp  Context.h  States.cpp  States.h  UI.cpp  UI.h  helpers.h  main.cpp
